[LFC][IFC] fix fast/block/float/022.html https://bugs.webkit.org/show_bug.cgi?id=245740

Reviewed by Antti Koivisto.

1. Move top/left static position computation over to InlineFormattingGeometry.
2. Add basic support for block level boxes and place them where they would go if they were inflow e.g.
We layout the following content:
  <div>some text<div out-of-flow></div>some more text</div>
as if it was
  <div>
    <div anon>some text</div>
    <div out-of-flow></div
    <div anon>some more text</div>
  </div>

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::computeStaticPositionForOutOfFlowContent):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.cpp:
(WebCore::Layout::InlineFormattingGeometry::staticPositionForOutOfFlowInlineLevelBox const):
(WebCore::Layout::InlineFormattingGeometry::staticPositionForOutOfFlowBlockLevelBox const):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.h:
* Source/WebCore/rendering/style/RenderStyle.h:
(WebCore::RenderStyle::isDisplayBlockLevel const):
(WebCore::RenderStyle::isOriginalDisplayBlockType const):
(WebCore::RenderStyle::isDisplayBlockType):

Canonical link: https://commits.webkit.org/254930@main